--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "jasmine-expect": "^4.0.0",
     "jasmine-matchers": "^0.2.3",
     "js-yaml": "3.12.0",
-    "jsdoc": "3.5.5",
+    "jsdoc": "^3.6.7",
     "karma": "3.1.4",
     "karma-babel-preprocessor": "^8.0.0-beta.0",
     "karma-chrome-launcher": "2.2.0",
